@@ -29,6 +29,7 @@ JAVA21="$(/usr/libexec/java_home -v 21)/bin/java"
 "$JAVA21" -ea --add-modules jdk.compiler -cp "$CP" at.gepardec.fachtracing.model.ApiModelTest
 "$JAVA21" -ea --add-modules jdk.compiler -cp "$CP" at.gepardec.fachtracing.analysis.StaticDecisionAnalyzerTest
 "$JAVA21" -ea --add-modules jdk.compiler -cp "$CP" at.gepardec.fachtracing.business.BusinessGraphProjectionTest
+"$JAVA21" -ea --add-modules jdk.compiler -cp "$CP" at.gepardec.fachtracing.developer.DecisionAuditMermaidRendererTest
 SPRING_DEPENDENCIES=$(cat target/verification-classpaths/spring.txt)
 SPRING_CP="$CP:fachtracing-spring/target/classes:fachtracing-spring/target/test-classes:$SPRING_DEPENDENCIES"
 "$JAVA21" -ea --add-modules jdk.compiler -cp "$SPRING_CP" at.gepardec.fachtracing.spring.SpringMethodContractProviderTest
